--- a/styles/cloud.css
+++ b/styles/cloud.css
@@ -1,52 +1,26 @@
-/* KEYFRAMES */
 @keyframes animateCloud {
     0% {
         transform: translateX(-100%) scale(var(--cloud-scale, 1));
         opacity: 0;
     }
+
     10% {
-        opacity: 0.6;
+        opacity: 0.4;
     }
+
     90% {
         opacity: 0.6;
     }
+
     100% {
-        transform: translateX(100vw) scale(var(--cloud-scale, 1));
+        transform: translateX(100vw) scale(var(--cloud-scale, .6));
         opacity: 0;
     }
 }
 
-/* OBJECTS */
 .cloud {
-    background-color: rgba(255, 255, 255, 0.6);
-    border-radius: 100px;
-    height: 120px;
-    position: relative;
-    width: 350px;
-    backdrop-filter: blur(1px);
-}
-
-.cloud::before,
-.cloud::after {
-    background-color: rgba(255, 255, 255, 0.6);
-    content: '';
-    position: absolute;
-    z-index: 1;
-    backdrop-filter: blur(1px);
-}
-
-.cloud::before {
-    border-radius: 100px;
-    height: 100px;
-    left: 60px;
-    top: -50px;
-    width: 100px;
-}
-
-.cloud::after {
-    border-radius: 200px;
-    width: 180px;
-    height: 180px;
-    right: 60px;
-    top: -90px;
+    background-image: url('/cloud.svg');
+    width: 340px;
+    height: 220px;
+    filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.5));
 }
